src/css/_core.scss
// Root
:root {
  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
  @include font-feature-settings("kern" 1, "lnum" 1, "pnum" 1);

  font-family: $font-stack-sans-serif;
  font-size: percentage($ratio-text);
  line-height: $line-height-small;

  @media (min-width: $breakpoint-content) {
    line-height: $line-height-root-content;
  }
}


// Sections
body {
  background-color: $color-light;
  color: $color-dark;
  margin: 0;
}

h1 {
  @extend %heading;
  @extend %link-underline-removal;

  font-size: rem($ratio-text-huge);
  margin: $margin-top-h1 0 $margin;
}

article,
section {
  section h1 {
    font-size: rem($ratio-text-large);
    font-weight: bolder;
    margin-top: $margin-huge;
  }
}


// Grouping Content
p {
  @extend %margin;
}

hr {
  background-color: transparent;
  border: 0;
  box-sizing: content-box;
  clear: both;
  color: $color-dark-light;
  font-size: rem($ratio-text-huge);
  height: 1em;
  line-height: 1;
  margin: $margin-large 0;
  text-align: center;

  &::before {
    content: "* * *";
  }
}

pre {
  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
  @extend %margin;
  @include font-feature-settings("zero" 1);

  clear: both;
  font-family: $font-stack-monospace;
  font-size: 1em;
  line-height: $line-height-tiny;
  overflow: auto;

  @media (min-width: $breakpoint-content) {
    overflow: visible;
    overflow-wrap: break-word;
    white-space: pre-wrap;
    word-wrap: break-word;
  }
}

blockquote {
  @extend %margin;

  border-left: $width-border-blockquote solid $color-border-blockquote;
  color: $color-fg-blockquote;
  padding-left: $padding-left-blockquote;
}

ul,
ol {
  @extend %margin;

  padding-left: $padding-left-list;

  ul,
  ol {
    margin-bottom: 0;
  }
}

dl {
  @extend %margin;

  dl {
    margin-bottom: 0;
  }
}

dt {
  color: $color-dark-light;
  font-weight: bolder;
}

dd {
  margin-left: $indent;

  + dd,
  + dt {
    margin-bottom: $margin-tiny;
  }
}

figure {
  @extend %margin;
  @extend %positioning-root;

  > :nth-last-child(2),
  > :nth-last-child(2) > :last-child {
    margin-bottom: 0;
  }
}

figcaption {
  @extend %decorative-border;
  @extend %protrusion;

  color: $color-dark-light;

  blockquote + & {
    border-left: $width-border-blockquote solid $color-border-blockquote;
    color: $color-fg-blockquote;
    padding-left: $padding-left-blockquote;
    padding-top: $margin;

    &::before {
      content: initial;
    }
  }

  @media (min-width: $breakpoint-full) {
    bottom: 0;

    blockquote + & {
      margin-right: 0;
      position: static;
      text-align: left;
      width: auto;
    }
  }
}

main {
  display: block;
}


// Text-level Semantics
a {
  color: $color-fg-a;
}

em {
  color: $color-dark-light;
  font-style: normal;
  font-weight: bolder;
}

strong {
  color: $color-secondary-dark;
  font-weight: normal;
  padding: $padding-small;
}

cite {
  font-style: normal;
}

abbr {
  cursor: help;
  letter-spacing: $width-border-small;
}

code,
var,
samp,
kbd {
  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
  @include font-feature-settings("zero" 1);

  font-family: $font-stack-monospace;
  font-size: 1em;

  p &::before,
  p &::after {
    content: " ";
    display: inline-block;
    font-size: 0;
    width: 0;
  }
}

mark {
  background-color: $color-secondary-light;
  color: inherit;
}


// Edits
ins {
  text-decoration: none;
}

del {
  text-decoration: line-through;
}


// Embedded Content
img,
video {
  border: 0;
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  max-width: 100%;

  figure & {
    background-color: $color-secondary;
    vertical-align: bottom;
  }
}


// Tabular Data
table {
  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
  @extend %margin;
  @include font-feature-settings("tnum" 1);

  border-bottom: $width-border-small solid $color-border-table;
  border-collapse: collapse;
  border-spacing: 0;
  clear: both;
  display: inline-block;
  max-width: 100%;
  overflow-x: auto;
  table-layout: fixed;

  @media not screen {
    display: table;
  }
}

%table-cell,
td {
  border-top: $width-border-small solid $color-border-table;
  padding: $padding-large;
  vertical-align: top;
  white-space: nowrap;
}

th {
  @extend %table-cell;

  text-align: left;

  thead & {
    border-bottom: $width-border solid $color-border-table;
  }
}


// Forms
:-ms-input-placeholder {
  color: inherit;
  opacity: .54;
}

::-webkit-input-placeholder {
  color: inherit;
  opacity: .54;
}

:placeholder-shown {
  opacity: .54;
}


// SVG
svg:not(:root) {
  overflow: hidden;
}

